# News_sentiment_analyzer

./: .gitignore  README.md  flake8_report.txt  main.py  pylint_report.txt  pyproject.toml  requirements.txt  sentiment_chart.html
app/: article.py  fetcher.py  main.py  reporter.py  sentiment.py
tests/: test_article.py  test_fetcher.py  test_reporter.py  test_sentiment.py
