[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news_sentiment"
version = "0.1.0"
description = "A Python-based tool for fetching news articles and analyzing their sentiment. This project uses natural language processing (NLP) techniques to determine whether the sentiment of news articles is positive, negative, or neutral. It also provides features for generating sentiment reports and visualizations."
authors = [
    { name = "Mraz Akos", email = "mrazakos05@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dotenv==0.9.9",
    "fire==0.7.0",
    "fonttools==4.57.0",
    "idna==3.10",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "narwhals==1.36.0",
    "nltk==3.9.1",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "plotly==6.0.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "six==1.17.0",
    "termcolor==3.1.0",
    "textblob==0.19.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "urllib3==2.4.0"
]

[tool.setuptools]
packages = ["app"]


[project.scripts]
mynews = "app.main:main"  # This makes `mynews` a CLI command